added a new vowel and updated one old one

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<tr>
 					<td>C<u>a</u>t</td>
 					<td>Ɐ ɐ</td>
-					<td>/æ/</td>
+					<td>/æ/ /a/</td>
 					<td>Kɐт</td>
 				</tr>
 				<tr>
@@ -141,6 +141,12 @@
 					<td>O o</td>
 					<td>/oʊ/ /əʊ/</td>
 					<td>Oк</td>
+				</tr>
+				<tr>
+					<td>H<u>o</u>t</td>
+					<td>Ҩ ҩ</td>
+					<td>/ɔ/</td>
+					<td>Хҩт</td>
 				</tr>
 				<tr>
 					<td><u>R</u>oad</td>
