--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 			<p style="max-width: 40rem; text-align: left;">Call me Ishmael. Some years ago–never mind how long precisely– having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Moby dick / Source]</a></p>
 		</center>
 		<center style="margin-top: 2rem;">
-			<input placeholder="İнпΔт лɐтiн iɴлiш хiр">
+			<input placeholder="İнпΔт лɐтiн iɴґлiш хiр">
 		</center>
 		<script>
 			(async() =>
