added more letters and fillid in spelling of pronunciation guides

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		</style>
 	</head>
 	<body>
-		<center><h2>English Cyrillic</h2></center>
-		<center style="margin-top: -1rem;"><h3>İɴлiш Ciрiлiк</h3></center>
+		<center><h2>English Cyrillic (Erillic)</h2></center>
+		<center style="margin-top: -1rem;"><h3>İɴлiш Ciрiлiк (Δрiлiк)</h3></center>
 		<center>
 			<table>
 				<tr>
@@ -93,6 +93,7 @@
 					<td><u>F</u>all</td>
 					<td>Ф ф</td>
 					<td>/f/</td>
+					<td>Фҩл</td>
 				</tr>
 				<tr>
 					<td><u>G</u>ood</td>
@@ -117,6 +118,12 @@
 					<td>K к</td>
 					<td>/k/</td>
 					<td>Kiɴ</td>
+				</tr>
+				<tr>
+					<td><u>L</u>ove</td>
+					<td>Л л</td>
+					<td>/l/</td>
+					<td>Л<small>Δ</small>v</td>
 				</tr>
 				<tr>
 					<td><u>M</u>ap</td>
@@ -145,7 +152,7 @@
 				<tr>
 					<td>H<u>o</u>t</td>
 					<td>Ҩ ҩ</td>
-					<td>/ɔ/</td>
+					<td>/ɔ/ /ʊ/</td>
 					<td>Хҩт</td>
 				</tr>
 				<tr>
@@ -165,6 +172,12 @@
 					<td>Ц ц</td>
 					<td>/ts/</td>
 					<td>Ц<small>Δ</small>нʌмi</td>
+				</tr>
+				<tr>
+					<td>M<u>oo</u>n</td>
+					<td>У у</td>
+					<td>/u/</td>
+					<td>Мӯɴ</td>
 				</tr>
 				<tr>
 					<td><u>You</u></td>
@@ -188,6 +201,7 @@
 					<td><u>V</u>oice</td>
 					<td>V v</td>
 					<td>/v/</td>
+					<td>Vҩic</td>
 				</tr>
 				<tr>
 					<td><u>W</u>in</td>
@@ -202,9 +216,17 @@
 					<td>Δɂo</td>
 				</tr>
 			</table>
+			<table style="margin-top: 1rem;">
+				<tr>
+					<td>H<u>ee</u>l (vs hill)</td>
+					<td><ruby style="position: relative;">◌<rt style="position: absolute; top: -0.3rem; left: 0.25rem;"><b>ー</b></rt></ruby></td>
+					<td>/◌ː/ /◌ˑ/</td>
+					<td>Хīл (vs хiл)</td>
+				</tr>
+			</table>
 		</center>
 		<center style="margin-top: 2rem;">
-			<p style="max-width: 40rem; text-align: left;">Kåл мi İшм<small>Δ</small>eл. Cʌм йiрc <small>Δ</small>ґo–нev<small>Δ</small>р м<small>Δ</small>iнд хʌв</p>
+			<p style="max-width: 40rem; text-align: left;">Kҩл мi İшм<small>Δ</small>eл. C<small>Δ</small>м йiрc <small>Δ</small>ґo–нev<small>Δ</small>р м<small>Δ</small>iнд хʌв</p>
 			<p style="max-width: 40rem; text-align: left;">Call me Ishmael. Some years ago–never mind how long precisely– having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Moby dick / Source]</a></p>
 		</center>
 		<center style="margin-top: 2rem;">
