fixed Churn example

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<td><u>Ch</u>urn</td>
 					<td>Ч ч</td>
 					<td>/ʧ⁠/</td>
-					<td>Banana</td>
+					<td>Ч<small>Δ</small>рн</td>
 				</tr>
 				<tr>
 					<td><u>Sh</u>ow</td>
