fixed spelling mistake

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 			</table>
 		</center>
 		<center style="margin-top: 2rem;">
-			<p style="max-width: 40rem; text-align: left;">Kҩл мi İшм<small>Δ</small>eл. Cʌм йi<small>Δ</small>рc <small>Δ</small>ґo–нev<small>Δ</small>р мʌiнд хʌҩ лҩɴ прicʌicлi– хɐviɴ лiϙл ҩр нo м<small>Δ</small>нi iн мʌi п<small>Δ</small>c, ɐнд н<small>Δ</small>8iɴ п<small>Δ</small>тiкй<small>Δ</small>л<small>Δ</small> ту iнт<small>Δ</small>рecт мi ҩн шҩ, ʌi 8ҩт ʌi вuд ceiл <small>Δ</small><small>Б</small>ʌuт <small>Δ</small> лiϙл ɐнд ci θ<small>Δ</small> вʌϙΔрi пʌт ҩv θ<small>Δ</small> в<small>Δ</small>рлд. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Мo<small>Б</small>i Дiк / Cҩрc]</a></p>
+			<p style="max-width: 40rem; text-align: left;">Kҩл мi İшм<small>Δ</small>eл. Cʌм йi<small>Δ</small>рc <small>Δ</small>ґo–нev<small>Δ</small>р мʌiнд хʌҩ лҩɴ прicʌicлi– хɐviɴ лiϙл ҩр нo м<small>Δ</small>нi iн мʌi п<small>Δ</small>c, ɐнд н<small>Δ</small>8iɴ п<small>Δ</small>тiкй<small>Δ</small>л<small>Δ</small> ту iнт<small>Δ</small>рecт мi ҩн шҩ, ʌi 8ҩт ʌi вuд ceiл <small>Δ</small><small>Б</small>ʌuт <small>Δ</small> лiϙл ɐнд ci θ<small>Δ</small> вʌϙ<small>Δ</small>рi пʌт ҩv θ<small>Δ</small> в<small>Δ</small>рлд. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Мo<small>Б</small>i Дiк / Cҩрc]</a></p>
 			<p style="max-width: 40rem; text-align: left;">Call me Ishmael. Some years ago–never mind how long precisely– having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Moby dick / Source]</a></p>
 		</center>
 		<center style="margin-top: 2rem;">
