removed more of the bad IPA commas

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 																										  .replace(/ŏ/g, "ҩ")
 																										  .replace(/̆/g, "")
 																										  .replace("ˈ", "")
-																										  .replace(/̩/g, "")
+																										  .replace(/̩|ˌ/g, "")
 																										  .replace(/\((.*?)\)/g, "$1");
 					if(result[0] == "{") res("");
 					res(result);
