added the letter zh

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<tr>
 					<td><u>I</u>n</td>
 					<td>İ i</td>
-					<td>/ɪ/ /i/</td>
+					<td>/ɪ/ /i/ /ɨ/</td>
 					<td>İн</td>
 				</tr>
 				<tr>
@@ -106,6 +106,12 @@
 					<td>Ґ ґ</td>
 					<td>/ɡ/</td>
 					<td>Ґ<small>Δ</small>д</td>
+				</tr>
+				<tr>
+					<td>Vi<u>si</u>on</td>
+					<td>Ж ж</td>
+					<td>/ʒ/</td>
+					<td>Viж<small>Δ</small>н</td>
 				</tr>
 				<tr>
 					<td><u>H</u>ow</td>
