--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 			<p id="result" style="max-width: 40rem; text-align: left; font-family: Arial, Helvetica, sans-serif;"></p>
 		</center>
 		<script>
-			const DICT = '{"eɪ":"a","æ":"ɐ","ə":"<small>Δ</small>","ʌ":"<small>Δ</small>","ɚ":"<small>Δ</small>","ɜ":"<small>Δ</small>","ɑ":"ʌ","ɐ":"ʌ","a":"ʌ","b":"<small>Б</small>","s":"c","ʧ⁠":"ч","ʃ":"ш","d":"д","ɪ":"i","i":"i","e":"e","ɛ":"e","f":"ф","ɡ":"ґ","h":"х","j":"й","k":"к","l":"л","ɫ":"л","m":"м","n":"н","ŋ":"ɴ","oʊ":"o","əʊ":"o","ɔ":"ҩ","o":"ҩ","p":"п","ɹ":"р","r":"р","ɾ":"ϙ","t":"т","ts":"ц","u":"у","ʉ":"у","ju":"ю","ð":"θ","θ":"8","v":"v","w":"в","ʊ":"u","ʔ":"ɂ"}';
+			const DICT = '{"eɪ":"a","æ":"ɐ","ə":"<small>Δ</small>","ʌ":"<small>Δ</small>","ɚ":"<small>Δ</small>","ɜ":"<small>Δ</small>","ɑ":"ʌ","ɐ":"ʌ","a":"ʌ","b":"<small>Б</small>","s":"c","ʧ⁠":"ч","ʃ":"ш","d":"д","ɪ":"i","i":"i","ɨ":"i","e":"e","ɛ":"e","f":"ф","ɡ":"ґ","ʒ":"ж","h":"х","j":"й","k":"к","l":"л","ɫ":"л","m":"м","n":"н","ŋ":"ɴ","oʊ":"o","əʊ":"o","ɔ":"ҩ","o":"ҩ","p":"п","ɹ":"р","r":"р","ɾ":"ϙ","t":"т","ts":"ц","u":"у","ʉ":"у","ju":"ю","ð":"θ","θ":"8","v":"v","w":"в","ʊ":"u","ʔ":"ɂ"}';
 			const dictionary = JSON.parse(DICT);
 
 			async function Erillic(word)
