--- a/index.html
+++ b/index.html
@@ -22,11 +22,27 @@
 				border: 1px solid black;
 				padding: 0.3rem 1rem;
 			}
+
+			.Ja-macron
+			{
+				position: relative;
+			}
+
+			.Ja-macron::after 
+			{
+				content: "–";
+				font-weight: 400;
+				position: absolute;
+				font-size: 0.75rem;
+				top: -0.4rem;
+				left: 0.15rem;
+			}
 		</style>
 	</head>
 	<body>
 		<center><h2>English Cyrillic (Erillic)</h2></center>
 		<center style="margin-top: -1rem;"><h3>İɴлiш Ciрiлiк (Δрiлiк)</h3></center>
+		<center style="margin-top: -1rem; margin-bottom: 1rem;"><small style="color: gray;">v1.0.0</small></center>
 		<center>
 			<table>
 				<tr>
@@ -120,10 +136,10 @@
 					<td>Хʌв</td>
 				</tr>
 				<tr>
-					<td><u>Y</u>ard</td>
+					<td><u>Y</u>onder</td>
 					<td>Й й</td>
 					<td>/j/</td>
-					<td>Йʌрд</td>
+					<td>йҩнд<small>Δ</small>р</td>
 				</tr>
 				<tr>
 					<td><u>K</u>ing</td>
@@ -164,7 +180,7 @@
 				<tr>
 					<td>H<u>o</u>t</td>
 					<td>Ҩ ҩ</td>
-					<td>/ɔ/ /o/</td>
+					<td>/ɔ/ /o/ /ɒ/</td>
 					<td>Хҩт</td>
 				</tr>
 				<tr>
@@ -204,9 +220,27 @@
 					<td>Мӯɴ</td>
 				</tr>
 				<tr>
+					<td><u>Ya</u>rd</td>
+					<td>Я я</td>
+					<td>/jɑ/ /jɐ/ /ja/</td>
+					<td><span class="Ja-macron">Я</span>д</td>
+				</tr>
+				<tr>
+					<td><u>Ye</u>ars</td>
+					<td>Ї ї</td>
+					<td>/jɪ/ /ji/ /jɨ/</td>
+					<td>Ї<small>Δ</small>рz</td>
+				</tr>
+				<tr>
+					<td><u>Ye</u>s</td>
+					<td>Є є</td>
+					<td>/je/ /jɛ/</td>
+					<td>Єc</td>
+				</tr>
+				<tr>
 					<td><u>You</u></td>
 					<td>Ю ю</td>
-					<td>/ju/</td>
+					<td>/ju/ /jʉ/</td>
 					<td>Ю</td>
 				</tr>
 				<tr>
@@ -248,16 +282,12 @@
 			</table>
 			<table style="margin-top: 1rem;">
 				<tr>
-					<td>H<u>ee</u>l (vs hill)</td>
+					<td>H<u>ea</u>l (vs hill)</td>
 					<td style="font-family: Arial, Helvetica, sans-serif;">◌̄</td>
 					<td style="font-family: Arial, Helvetica, sans-serif;">/◌ː/ /◌ˑ/</td>
 					<td>Хīл (vs хiл)</td>
 				</tr>
 			</table>
-		</center>
-		<center style="margin-top: 2rem;">
-			<p style="max-width: 40rem; text-align: left;">Kҩл мi İшм<small>Δ</small>eл. Cʌм йi<small>Δ</small>рc <small>Δ</small>ґo–нev<small>Δ</small>р мʌiнд хʌҩ лҩɴ прicʌicлi– хɐviɴ лiϙл ҩр нo м<small>Δ</small>нi iн мʌi п<small>Δ</small>c, ɐнд н<small>Δ</small>8iɴ п<small>Δ</small>тiкй<small>Δ</small>л<small>Δ</small> ту iнт<small>Δ</small>рecт мi ҩн шҩ, ʌi 8ҩт ʌi вuд ceiл <small>Δ</small><small>Б</small>ʌuт <small>Δ</small> лiϙл ɐнд ci θ<small>Δ</small> вʌϙ<small>Δ</small>рi пʌт ҩv θ<small>Δ</small> в<small>Δ</small>рлд. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Мo<small>Б</small>i Дiк / Cҩрc]</a></p>
-			<p style="max-width: 40rem; text-align: left;">Call me Ishmael. Some years ago–never mind how long precisely– having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Moby dick / Source]</a></p>
 		</center>
 		<center style="margin-top: 2rem;">
 			<textarea id="input" style="width: 30rem; min-height: 5rem; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; resize: vertical;" placeholder="İнпΔт лɐтiн iɴґлiш хiр"></textarea>
@@ -268,9 +298,19 @@
 		<center>
 			<p id="result" style="max-width: 40rem; text-align: left; font-family: Arial, Helvetica, sans-serif;"></p>
 		</center>
+		<center><h2 style="margin-top: 2rem;">Moby Dick</h2></center>
+		<center style="margin-top: -1rem;"><h3>Мo<small>Б</small>i Дiк</h3></center>
+		<center style="margin-top: 1rem;">
+			<p style="max-width: 40rem; text-align: left;">Kҩл мi İшм<small>Δ</small>eл. Cʌм ї<small>Δ</small>рc <small>Δ</small>ґo–нev<small>Δ</small>р мʌiнд хʌҩ лҩɴ прicʌicлi– хɐviɴ лiϙл ҩр нo м<small>Δ</small>нi iн мʌi п<small>Δ</small>c, ɐнд н<small>Δ</small><small>8</small>iɴ п<small>Δ</small>тiкй<small>Δ</small>л<small>Δ</small> ту iнт<small>Δ</small>рecт мi ҩн шҩ, ʌi <small>8</small>ҩт ʌi вuд ceiл <small>Δ</small><small>Б</small>ʌuт <small>Δ</small> лiϙл ɐнд ci <small>θ</small><small>Δ</small> вʌϙ<small>Δ</small>рi пʌт ҩv <small>θ</small><small>Δ</small> в<small>Δ</small>рлд. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Мo<small>Б</small>i Дiк / Cҩрc]</a></p>
+			<p style="max-width: 40rem; text-align: left;">Call me Ishmael. Some years ago–never mind how long precisely– having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Moby dick / Source]</a></p>
+		</center>
 		<script>
-			const DICT = '{"eɪ":"a","æ":"ɐ","ə":"<small>Δ</small>","ʌ":"<small>Δ</small>","ɚ":"<small>Δ</small>","ɜ":"<small>Δ</small>","ɑ":"ʌ","ɐ":"ʌ","a":"ʌ","b":"<small>Б</small>","s":"c","ʧ⁠":"ч","ʃ":"ш","d":"д","ɪ":"i","i":"i","ɨ":"i","e":"e","ɛ":"e","f":"ф","ɡ":"ґ","ʒ":"ж","h":"х","j":"й","k":"к","l":"л","ɫ":"л","m":"м","n":"н","ŋ":"ɴ","oʊ":"o","əʊ":"o","ɔ":"ҩ","o":"ҩ","p":"п","ɹ":"р","r":"р","ɾ":"ϙ","t":"т","ts":"ц","u":"у","ʉ":"у","ju":"ю","ð":"θ","θ":"<small>8</small>","v":"v","w":"в","ʊ":"u","ʔ":"ɂ"}';
+			const DICT = '{"eɪ":"a","æ":"ɐ","ə":"<small>Δ</small>","ʌ":"<small>Δ</small>","ɚ":"<small>Δ</small>","ɜ":"<small>Δ</small>","ɑ":"ʌ","ɐ":"ʌ","a":"ʌ","b":"<small>Б</small>","s":"c","ʧ⁠":"ч","ʃ":"ш","d":"д","ɪ":"i","i":"i","ɨ":"i","e":"e","ɛ":"e","f":"ф","ɡ":"ґ","ʒ":"ж","h":"х","j":"й","k":"к","l":"л","ɫ":"л","m":"м","n":"н","ŋ":"ɴ","oʊ":"o","əʊ":"o","ɔ":"ҩ","o":"ҩ","ɒ":"ҩ","p":"п","ɹ":"р","r":"р","ɾ":"ϙ","t":"т","ts":"ц","u":"у","ʉ":"у","jɑ":"я","jɐ":"я","ja":"я","jɪ":"ї","ji":"ї","jɨ":"ї","je":"є","jɛ":"є","ju":"ю","jʉ":"ю","ð":"θ","θ":"<small>8</small>","v":"v","w":"в","ʊ":"u","ʔ":"ɂ"}';
 			const dictionary = JSON.parse(DICT);
+
+			const textarea = document.getElementById("input");
+			const button = document.getElementById("submit");
+			const result = document.getElementById("result");
 
 			const wordBank = 
 			{
@@ -285,7 +325,7 @@
 			async function Erillic(word)
 			{
 				return new Promise(async (res, rej) => 
-				{
+				{					
 					const response = await fetch("https://api.dictionaryapi.dev/api/v2/entries/en/" + word);
 
 					const json = (await response.json())[0];
@@ -296,7 +336,7 @@
 							res(wordBank[word] + " ");
 						} else 
 						{
-							res(word + " ");
+							res("[" + word + "] ");
 						}
 					} 
 
@@ -312,35 +352,34 @@
 						}
 					} 
 					let phonetic = (json.phonetic ? json.phonetic : json.phonetics.find(i => i.text).text).replace(/\//g, "").replace(/\[|\]/g, "");
+					console.log(phonetic);
 					
-
-					const result = phonetic.split("").map(i => dictionary[i] ? dictionary[i] : i).join("").replace("<small>Δ</small>в", "o")
-																										  .replace(/\./g, "")
-																										  .replace("йу", "ю")
-																										  .replace("ɝ", "<small>Δ</small>р")
-																										  .replace(/т͡ш|тш/g, "ч")
-																										  .replace("<small>Δ</small>ː", "<ruby><small>Δ</small><rt style=\"margin-bottom: -0.5rem;\"><b style=\"font-weight: bolder;\">–</b></rt></ruby>")
-																										  .replace("ҩː", "<ruby><small>ҩ</small><rt style=\"margin-bottom: -0.575rem;\"><b style=\"font-weight: bolder;\">–</b></rt></ruby>")
-																										  .replace("ː", "̄")
-																										  .replace("<small>Δ</small>u", "o")
-																										  .replace(/ŏ/g, "ҩ")
-																										  .replace(/̆/g, "")
-																										  .replace("ˈ", "")
-																										  .replace(/̩|ˌ/g, "")
-																										  .replace(/\((.*?)\)/g, "$1");
-					if(result[0] == "{") res("");
-					res(result + " ");
+					const result2 = phonetic.split("").map(i => dictionary[i] ? dictionary[i] : i).join("").replace("<small>Δ</small>в", "o")
+																										   .replace(/\./g, "")
+																										   .replace("йу", "ю")
+																										   .replace("йi", "ї")
+																										   .replace("йe", "є")
+																										   .replace("йʌ", "я")
+																										   .replace("ɝ", "<small>Δ</small>р")
+																										   .replace(/т͡ш|тш/g, "ч")
+																										   .replace("<small>Δ</small>ː", "<ruby><small>Δ</small><rt style=\"margin-bottom: -0.5rem;\"><b style=\"font-weight: bolder;\">–</b></rt></ruby>")
+																										   .replace("ҩː", "<ruby><small>ҩ</small><rt style=\"margin-bottom: -0.575rem;\"><b style=\"font-weight: bolder;\">–</b></rt></ruby>")
+																										   .replace("ː", "̄")
+																										   .replace("<small>Δ</small>u", "o")
+																										   .replace(/ŏ/g, "ҩ")
+																										   .replace(/̆/g, "")
+																										   .replace("ˈ", "")
+																										   .replace(/̩|ˌ/g, "")
+																										   .replace(/\((.*?)\)/g, "$1");
+					if(result2[0] == "{") res("");
+					res(result2 + " ");
 				});
 			};
-
-			const textarea = document.getElementById("input");
-			const button = document.getElementById("submit");
-			const result = document.getElementById("result");
 
 			button.addEventListener("click", async () => 
 			{
 				result.innerHTML = "";
-				const toConvert = textarea.value.replace(/[^\w\s]+/g, "").split(" ");
+				const toConvert = textarea.value.replace(/( ?)([^\w\s]+)( ?)/g, " ").split(" ");
 				for(let i = 0; i < toConvert.length; i++)
 				{
 					result.innerHTML += await Erillic(toConvert[i].toLowerCase());
