--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<body>
 		<center><h2>English Cyrillic (Erillic)</h2></center>
 		<center style="margin-top: -1rem;"><h3>İɴлiш Ciрiлiк (Δрiлiк)</h3></center>
-		<center style="margin-top: -1rem; margin-bottom: 1rem;"><small style="color: gray;">v1.0.0</small></center>
+		<center style="margin-top: -1rem; margin-bottom: 1rem;"><small style="color: gray;">v1.0.1</small></center>
 		<center>
 			<table>
 				<tr>
@@ -128,6 +128,12 @@
 					<td>Ж ж</td>
 					<td>/ʒ/</td>
 					<td>Viж<small>Δ</small>н</td>
+				</tr>
+				<tr>
+					<td><u>J</u>ob</td>
+					<td>J j</td>
+					<td>/ʤ/</td>
+					<td>Jҩ<small>Б</small></td>
 				</tr>
 				<tr>
 					<td><u>H</u>ow</td>
@@ -271,7 +277,7 @@
 					<td>H<u>oo</u>k</td>
 					<td>U u</td>
 					<td>/ʊ/</td>
-					<td>Вiн</td>
+					<td>Хuк</td>
 				</tr>
 				<tr>
 					<td>Uh<u>-</u>oh</td>
@@ -303,6 +309,16 @@
 		<center style="margin-top: 1rem;">
 			<p style="max-width: 40rem; text-align: left;">Kҩл мi İшм<small>Δ</small>eл. Cʌм ї<small>Δ</small>рc <small>Δ</small>ґo–нev<small>Δ</small>р мʌiнд хʌҩ лҩɴ прicʌicлi– хɐviɴ лiϙл ҩр нo м<small>Δ</small>нi iн мʌi п<small>Δ</small>c, ɐнд н<small>Δ</small><small>8</small>iɴ п<small>Δ</small>тiкй<small>Δ</small>л<small>Δ</small> ту iнт<small>Δ</small>рecт мi ҩн шҩ, ʌi <small>8</small>ҩт ʌi вuд ceiл <small>Δ</small><small>Б</small>ʌuт <small>Δ</small> лiϙл ɐнд ci <small>θ</small><small>Δ</small> вʌϙ<small>Δ</small>рi пʌт ҩv <small>θ</small><small>Δ</small> в<small>Δ</small>рлд. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Мo<small>Б</small>i Дiк / Cҩрc]</a></p>
 			<p style="max-width: 40rem; text-align: left;">Call me Ishmael. Some years ago–never mind how long precisely– having little or no money in my purse, and nothing particular to interest me on shore, I thought I would sail about a little and see the watery part of the world. <a href="https://www.fulltextarchive.com/book/Moby-Dick-or-The-Whalex8185/">[Moby dick / Source]</a></p>
+		</center>
+		<center><h2 style="margin-top: 2rem;">Ligatures</h2></center>
+		<center style="margin-top: -1rem;"><h3>ЛiґΔчΔz</h3></center>
+		<center>
+			<table>
+				<tr>
+					<td>Ʌi</td>
+					<td style="font-family: Arial, Helvetica, sans-serif;"><ruby>ᗑ<rt style="font-size: 0.3rem; margin-bottom: -0.175rem;">・</rt></ruby></td>
+				</tr>
+			</table>
 		</center>
 		<script>
 			const DICT = '{"eɪ":"a","æ":"ɐ","ə":"<small>Δ</small>","ʌ":"<small>Δ</small>","ɚ":"<small>Δ</small>","ɜ":"<small>Δ</small>","ɑ":"ʌ","ɐ":"ʌ","a":"ʌ","b":"<small>Б</small>","s":"c","ʧ⁠":"ч","ʃ":"ш","d":"д","ɪ":"i","i":"i","ɨ":"i","e":"e","ɛ":"e","f":"ф","ɡ":"ґ","ʒ":"ж","h":"х","j":"й","k":"к","l":"л","ɫ":"л","m":"м","n":"н","ŋ":"ɴ","oʊ":"o","əʊ":"o","ɔ":"ҩ","o":"ҩ","ɒ":"ҩ","p":"п","ɹ":"р","r":"р","ɾ":"ϙ","t":"т","ts":"ц","u":"у","ʉ":"у","jɑ":"я","jɐ":"я","ja":"я","jɪ":"ї","ji":"ї","jɨ":"ї","je":"є","jɛ":"є","ju":"ю","jʉ":"ю","ð":"θ","θ":"<small>8</small>","v":"v","w":"в","ʊ":"u","ʔ":"ɂ"}';
@@ -361,6 +377,7 @@
 																										   .replace("йe", "є")
 																										   .replace("йʌ", "я")
 																										   .replace("ɝ", "<small>Δ</small>р")
+																										   .replace(/д͡ж|дж/g, "j")
 																										   .replace(/т͡ш|тш/g, "ч")
 																										   .replace("<small>Δ</small>ː", "<ruby><small>Δ</small><rt style=\"margin-bottom: -0.5rem;\"><b style=\"font-weight: bolder;\">–</b></rt></ruby>")
 																										   .replace("ҩː", "<ruby><small>ҩ</small><rt style=\"margin-bottom: -0.575rem;\"><b style=\"font-weight: bolder;\">–</b></rt></ruby>")
