--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
 					<td>Kiɴ</td>
 				</tr>
 				<tr>
+					<td>A<u>x</u>e</td>
+					<td>Ξ ξ</td>
+					<td>/ks/</td>
+					<td>Ɐξ</td>
+				</tr>
+				<tr>
 					<td><u>L</u>ove</td>
 					<td>Л л</td>
 					<td>/l/ /ɫ/</td>
@@ -430,6 +436,7 @@
 																										   .replace("йу", "ю")
 																										   .replace("йi", "ї")
 																										   .replace("йe", "є")
+																										   .replace("кc", "ξ")
 																										   .replace("йʌ", "я")
 																										   .replace("ɝ", "<small>Δ</small>р")
 																										   .replace(/д͡ж|дж/g, "j")
